[package]
name = "network"
version = "0.1.0"
authors = ["leeyr <leeyr@cryptape.com>"]
edition = "2018"

[dependencies]
fnv = "1.0.6"
log = "0.4"
#discovery = { git = "https://github.com/driftluo/p2p.git" }
#p2p = { git = "https://github.com/driftluo/p2p.git" }
p2p = { path = "/Volumes/x/cryptape/code/p2p"}
discovery = { path = "/Volumes/x/cryptape/code/p2p/discovery" }
tokio = "0.1.14"
futures = "0.1.25"
env_logger = "0.6.0"
util = { git = "https://github.com/leeyr338/cita-common.git", branch = "develop" }
serde = "1.0.84"
serde_derive = "1.0.84"
clap = "2.32"
crossbeam-channel= "0.3.6"

[dev-dependencies]
tempfile = "3.0.5"
